# leaflet-automation

./: .gitignore  AGENTS.md  README.md  conftest.py  opencode.json  pyproject.toml
.agents/agents/: code-reviewer.md  database-optimizer.md  fastapi-pro.md  python-pro.md  search-specialist.md  test-automator.md
.agents/skills/review-us/: SKILL.md
.agents/skills/writing-real-data-e2e-tests/: SKILL.md
.codegraph/: codegraph.db
demo_screenshots/: leaflets.db
docs/: IMPLEMENTATION_BACKLOG.md  IMPLEMENTED_FEATURES.md  LIDL_LEAFLETS_API_RESEARCH.md
docs/superpowers/plans/: 2026-07-08-us-4-1-keyword-fallback-union.md  2026-07-10-us-1-1-grid-detector.md
docs/superpowers/specs/: 2026-07-08-generic-card-extraction-design.md
src/leaflet_automation/: __init__.py
src/leaflet_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/leaflet_automation/app/: README.md  __init__.py  config.py
src/leaflet_automation/cli/: README.md  main.py
src/leaflet_automation/core/: README.md  __init__.py  dates.py  dedupe.py  enums.py  models.py  storage.py
src/leaflet_automation/db/: README.md  schema.py  sqlite.py
src/leaflet_automation/jobs/: README.md  discover_leaflets.py  extract_leaflet.py  run_weekly.py
src/leaflet_automation/retailers/: README.md  __init__.py  base.py
src/leaflet_automation/services/: README.md  __init__.py  cards.py  classifier.py  images.py  ocr.py  pdf.py  (+1 more)
tests/: test_cards.py  test_lidl_extraction_integration.py  test_lidl_live_e2e.py  test_us_4_1_keyword_union.py
tests/e2e/: test_discover_lidl_e2e.py
(+14 files in other folders)
