[project]
name = "leaflet-automation"
version = "0.1.0"
description = "Backend pipeline for retailer leaflet discovery and product extraction"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.28",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "typer>=0.12,<0.13",
]

[project.scripts]
leaflets = "leaflet_automation.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
